--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -22,3 +22,35 @@ select,
 textarea {
     max-width: 280px;
 }
+/* Bootstrap Overrides */
+.navbar-inverse {
+    background-color: #A320C6;
+    border-color: #A320C6;
+}
+
+.navbar-inverse .navbar-brand {
+        color: #fff;
+}
+.navbar-inverse .navbar-nav > li > a {
+        color: #fff;
+}
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+        background-color: rgba(139, 28, 169, 0.86);
+}
+.navbar-inverse .navbar-nav > .dropdown > a .caret {
+    border-top-color: #fff;
+    border-bottom-color: #fff;
+}
+.navbar-brand{
+    font-weight:700;
+}
+.form-control:focus {
+    border-color: #2196f3;
+    -webkit-box-shadow: none; 
+    box-shadow: none; 
+}
+.dropdown-menu{
+    box-shadow:none;
+    -webkit-box-shadow: none;
+}
+
