--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -22,6 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+
+span.field-validation-error {
+    color: #d41c1c;
+    font-weight: bold;
+}
 /* Bootstrap Overrides */
 .navbar-inverse {
     background-color: #A320C6;
