--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -27,6 +27,26 @@ span.field-validation-error {
     color: #d41c1c;
     font-weight: bold;
 }
+
+.voffset {
+    margin-top: 2px
+}
+.voffset1 {
+    margin-top: 5px
+}
+.voffset2 {
+    margin-top: 10px
+}
+.voffset3 {
+    margin-top: 20px
+}
+.voffset4 {
+    margin-top: 40px
+}
+.voffset5 { 
+    margin-top:80px
+
+}
 /* Bootstrap Overrides */
 .navbar-inverse {
     background-color: #A320C6;
