--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -76,10 +76,11 @@ span.field-validation-error {
 }
 .form-control{
     font-size:17px;
-    padding:20px 15px;
+    height: 44px;
     -ms-border-radius:9px;
     border-radius:9px;
 }
+
 .dropdown-menu{
     box-shadow:none;
     -webkit-box-shadow: none;
@@ -133,4 +134,14 @@ span.field-validation-error {
 
 .gigs > li .details .genre{
     font-size:15px;
+}
+
+.gigs > li .actions {
+    font-size:15px;
+    display:none;
+
+}
+
+.gigs > li:hover .actions{
+    display:block;
 }
