--- a/GigHub/GigHub/Views/Gigs/Mine.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Mine.cshtml
@@ -27,6 +27,9 @@
                 <div class="actions">
                     <a href="@Url.Action("Edit","Gigs",new { id = gig.Id})">
                         Edit
+                    </a>|
+                    <a href="#" class="js-cancel-gig"  data-gig-id="@gig.Id">
+                        Cancel
                     </a>
                 </div>
 
@@ -34,3 +37,45 @@
         </li>
     }
 </ul>
+
+@section scripts
+{
+    <script>
+        $(document).ready(function(){
+            $(".js-cancel-gig").click(function (e) {
+                var link = $(e.target);                
+
+
+
+                bootbox.confirm({
+                    message: "Are you sure you want to cancel this gig?",
+                    buttons: {
+                        confirm: {
+                            label: 'Yes',
+                            className: 'btn-danger'
+                        },
+                        cancel: {
+                            label: 'No',
+                            className: 'btn-default'
+                        }
+                    },
+                    callback: function (result) {
+                        $.ajax({
+                            url: "/api/gigs/" + link.attr("data-gig-id"),
+                            method: "DELETE"
+                        })
+                            .done(function () {
+                                link.parents("li").fadeOut(function () {
+                                    $(this).remove();
+                                });
+                            })
+                            .fail(function () {
+                                alert("Something is failed!");
+                            });
+                    }
+                });
+       
+            });
+        });
+    </script>    
+}
