--- a/GigHub/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/GigHub/Views/Shared/Gigs.cshtml
@@ -19,6 +19,10 @@
             <div class="details">
                 <span class="artist">
                     @gig.Artist.Name 
+                    @if (gig.IsCanceled)
+                    {
+                        <span class="label label-warning">Canceled</span>
+                    }
                     
                     @if (Model.ShowActions)
                     {
@@ -27,8 +31,9 @@
                 </span>
                 <span class="genre">
                     @gig.Genre.Name
+                  
                 </span>
-                @if (Model.ShowActions)
+                @if (Model.ShowActions && !gig.IsCanceled)
                 {
                     <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-atendance">Going ?</button>
                 }
