--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -48,6 +48,10 @@ span.field-validation-error {
 
 }
 /* Bootstrap Overrides */
+.popover{
+    box-shadow:none;
+    -webkit-box-shadow:none;
+}
 .navbar-inverse {
     background-color: #A320C6;
     border-color: #A320C6;
@@ -155,4 +159,23 @@ span.field-validation-error {
 
 .gigs > li:hover .actions{
     display:block;
+}
+.popover-notifications .popover-content{
+    padding:0;
+
+}
+
+.popover-notifications ul.notifications {
+    list-style: none;
+    padding-left: 0;
+}
+.popover-notifications ul.notifications > li {
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
+.popover-notifications ul.notifications > li:last-child {
+    border-bottom: none;
+}
+.popover-notifications ul.notifications .highlight{
+    font-weight:bold;
 }
