--- a/GigHub/GigHub/Views/Shared/_Layout.cshtml
+++ b/GigHub/GigHub/Views/Shared/_Layout.cshtml
@@ -36,17 +36,62 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/lib")    
     @RenderSection("scripts", required: false)
+    <script type="text/x-template" id="notifications-template">
+        <ul class="notifications">
+            <%
+                _.each(notifications,function(notification){
+                    if(notification.type == 1){ %>
+                        <li><span class="highlight"><%= notification.gig.artist.name %></span> has canceled the gig at <%= notification.gig.venue %> as <%= moment(notification.gig.dateTime).format("DD/MM/YYYY HH:mm") %>.</li>
+                        
+                    <% }
+                    else if(notification.type == 2){ 
+                        var changes = [],
+                            originalValues = [],
+                            newValues = [];
+                        
+                        if (notification.originalVemue != notification.gig.venue){
+                            changes.push('venue');
+                            originalValues.push(notification.originalVenue);
+                            newValues.push(notification.gig.venue);
+                        }
+                        if(notification.originalDateTime != notification.gig.dateTime){
+                            changes.push('date/time');
+                            originalValues.push(moment(notification.originalDateTime).format("DD/MM/YYYY HH:mm"));
+                            newValues.push(moment(notification.gig.datetime).format("DD/MM/YYYY HH:mm")); 
+                        }
+            
+            %>
+                    <li><span class="highlight"><%= notification.gig.artist.name %></span>  has changed the <%= changes.join(' and ') %> of the gig from <%= originalValues.join('/') %> to  <%= newValues.join('/') %>.</li>
+
+                    <% }
+                })
+            
+            %>
+        </ul>
+    </script>
     <script>
-        $(document).ready(function () {
+        $(document).ready(function () {           
             $.getJSON("/api/notifications", function (notifications) {
+                if (notifications.length == 0)
+                    return;
                 $(".js-notifications-count")
                     .text(notifications.length)
                     .removeClass("hide")
                     .addClass("animated bounceInDown");
+                $(".notifications").popover({
+                    html: true,
+                    title: "Notifications",
+                    content: function () {
+                        var compiled = _.template($("#notifications-template").html());
+                        return compiled({ notifications: notifications});                        
+                    },
+                    placement: "bottom",
+                    template: '<div class="popover popover-notifications" role="tooltip"><div class="arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>'
+                });
             });
+            
         });
     </script>
 </body>
