Implement Search form

--- a/GigHub/GigHub/Content/site.less
+++ b/GigHub/GigHub/Content/site.less
@@ -182,3 +182,10 @@ span.field-validation-error {
         }
     }
 }
+#searchGigs {
+    width: 300px;
+
+    .btn {
+        font-size: 20px;
+    }
+}
