--- a/GigHub/GigHub/Content/site.css
+++ b/GigHub/GigHub/Content/site.css
@@ -161,3 +161,9 @@ span.field-validation-error {
 .popover-notifications ul.notifications .highlight {
   font-weight: bold;
 }
+#searchGigs {
+  width: 300px;
+}
+#searchGigs .btn {
+  font-size: 20px;
+}
