--- a/GigHub/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/GigHub/Views/Shared/Gigs.cshtml
@@ -4,6 +4,20 @@
 }
 
 <h1>@Model.Heading</h1>
+@using (Html.BeginForm("Search", "Gigs"))
+{
+    <div class="form-group">
+        <div id="searchGigs" class="input-group">
+            @Html.TextBoxFor(m => m.SearchTerm, new { @class = "form-control", @placeholder = "Search by artist, genre..." })    
+            <span class="input-group-btn">    
+                <button class="btn btn-secondary" type="submit">
+                    <i class="glyphicon glyphicon-search"></i>
+                </button>
+                
+            </span>
+        </div>        
+    </div>    
+}
 <ul class="gigs voffset4">
     @foreach(var gig in Model.UpcommingGigs)
     {
