--- a/GigHub/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/GigHub/Views/Shared/Gigs.cshtml
@@ -8,7 +8,7 @@
 {
     <div class="form-group">
         <div id="searchGigs" class="input-group">
-            @Html.TextBoxFor(m => m.SearchTerm, new { @class = "form-control", @placeholder = "Search by artist, genre..." })    
+            @Html.TextBoxFor(m => m.SearchTerm, new { @class = "form-control", placeholder = "Search by artist, genre..." })    
             <span class="input-group-btn">    
                 <button class="btn btn-secondary" type="submit">
                     <i class="glyphicon glyphicon-search"></i>
@@ -32,7 +32,9 @@
             </div>
             <div class="details">
                 <span class="artist">
-                    @gig.Artist.Name 
+                    <a href="@Url.Action("Details","Gigs", new { Id = @gig.Id })" >
+                        @gig.Artist.Name 
+                    </a>                    
                     @if (gig.IsCanceled)
                     {
                         <span class="label label-warning">Canceled</span>
