--- a/GigHub/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/GigHub/Views/Shared/Gigs.cshtml
@@ -51,7 +51,13 @@
                 </span>
                 @if (Model.ShowActions && !gig.IsCanceled)
                 {
-                    <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-atendance">Going ?</button>
+                    <button 
+                       data-gig-id="@gig.Id" 
+                       class="btn
+                            @(Model.Attendances.Contains(gig.Id)?"btn-info":"btn-default ") 
+                            btn-sm pull-right js-toggle-atendance">
+                        Going @(Model.Attendances.Contains(gig.Id) ? "" :"?")
+                    </button>
                 }
                 
             </div>
@@ -65,17 +71,34 @@
         $(document).ready(function () {
             $(".js-toggle-atendance").click(function (e) {
                 var button = $(e.target);
-                $.post("/api/attendances", { gigId: button.attr("data-gig-id")})
-                    .done(function () {
-                        button
-                            .removeClass("btn-default")
-                            .addClass("btn-info")
-                            .text("Going");
+                if (button.hasClass("btn-default")) {
+                    $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
+                        .done(function () {
+                            button
+                                .removeClass("btn-default")
+                                .addClass("btn-info")
+                                .text("Going");
+                        })
+                        .fail(function () {
+                            alert("Something failed!");
+                        });                    
+                } else {
+                    $.ajax({
+                        url: "/api/attendances/" + button.attr("data-gig-id"),
+                        method: "DELETE"
                     })
-                    .fail(function () {
-                        alert("Something failed!");
-                    })
+                        .done(function () {
+                            button
+                                .removeClass("btn-info")
+                                .addClass("btn-default")
+                                .text("Going?");
+                        })
+                        .fail(function () {
+                            alert("Something failed!");
+                        });
+                }
             });
+                
 
             $(".js-toggle-follow").click(function (e) {
                 var button = $(e.target);
