--- a/GigHub/GigHub/Views/Gigs/Details.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Details.cshtml
@@ -6,22 +6,29 @@
 <h2>
     @Model.Gig.Artist.Name
     @if (User.Identity.IsAuthenticated)
-    {
-        if (Model.IsFollowing)
-        {
-            <button class="btn btn-info">Following</button>
-        }
-        else
-        {
-            <button class="btn btn-info">Follow</button>
-        }
+    {       
+        <button 
+                class="btn 
+                @(Model.IsFollowing?"btn-info":"btn-secondary")
+                btn-sm js-toggle-follow" 
+                data-user-id="@Model.Gig.ArtistId">
+            Follow@(Model.IsFollowing ? "ing" : "")
+        </button>
     }
 </h2>
 <p>
     Performing at @Model.Gig.Venue on @Model.Gig.DateTime.ToString("dd/MM/yyyy") at @Model.Gig.DateTime.ToString("HH:mm")
 </p>
 
-@if (User.Identity.IsAuthenticated)
+@if (User.Identity.IsAuthenticated && Model.IsAttending)
 {
     <p>You are going to this event.</p>
+}
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            FollowingsController.init();
+        });
+    </script>
 }
