--- a/GigHub/GigHub/Views/Gigs/Mine.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Mine.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Mine";
 }
 
-<h2>My Upcommimg Gigs</h2>
+<h2>My Upcoming Gigs</h2>
 
 <ul class="gigs voffset4">
     @foreach (var gig in Model)
